// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Component View 1`] = `
<div
  age={18}
  name="name"
  onClick={[Function]}
>
  component
  <div>
    text
  </div>
</div>
`;

exports[`Create Component View 2`] = `
<div
  age={18}
  name="name"
  onClick={[Function]}
>
  toggle component
  <div>
    text
  </div>
</div>
`;
